--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <h3>Example output:</h3>
             <code>
                 {
-                  "unix": 1450137600,
-                  "natural": "December 15, 2015"
+                  "unix": 1451516400,
+                  "natural": "December 31,2015"
                 }
             </code>
         </div>
