--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://timestamp-ms.herokuapp.com/December 31, 2015</code><br>
-            <code>https://timestamp-ms.herokuapp.com/1451516400</code>
+            <code>https://radiant-hollows-3532.herokuapp.com/December 31, 2015</code><br>
+            <code>https://radiant-hollows-3532.herokuapp.com/1451516400</code>
             <h3>Example output:</h3>
             <code>
                 {
